k8s/production/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: norge360-auth-api
spec:
  type: ClusterIP
  selector:
    app: norge360-auth-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-gateway
spec:
  type: ClusterIP
  selector:
    app: norge360-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-accounts-api
spec:
  type: ClusterIP
  selector:
    app: norge360-accounts-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-community-api
spec:
  type: ClusterIP
  selector:
    app: norge360-community-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-messaging-api
spec:
  type: ClusterIP
  selector:
    app: norge360-messaging-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-discovery-api
spec:
  type: ClusterIP
  selector:
    app: norge360-discovery-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-search-api
spec:
  type: ClusterIP
  selector:
    app: norge360-search-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-meilisearch
spec:
  type: ClusterIP
  selector:
    app: norge360-meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: 7700

---
apiVersion: v1
kind: Service
metadata:
  name: norge360-rabbitmq
spec:
  type: ClusterIP
  selector:
    app: norge360-rabbitmq
  ports:
    - name: amqps
      port: 5671
      targetPort: 5671
    - name: management
      port: 15672
      targetPort: 15672
