k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: norge360-gateway
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: norge360-gateway
              port:
                number: 8080
